Implemented Theaters Endpoint
